--- a/stylse.css
+++ b/stylse.css
@@ -2,27 +2,23 @@
 
 * {
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
 }
 
 body {
     font-family: 'Muli', sans-serif;
+    margin: 0;
     background-color: black;
     color: #fff;
-    overflow-x: hidden; /* Evita a rolagem horizontal em telas menores */
 }
 
 .titlepage {
     text-align: center;
     margin-top: 20px;
-    padding: 10px;
 }
 
 .container {
     display: flex;
     justify-content: center;
-    flex-wrap: wrap; /* Permite que os painéis sejam quebrados em múltiplas linhas em telas pequenas */
     width: 90vw;
     margin: 0 auto; /* Centraliza o container */
 }
@@ -31,29 +27,27 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 50vh; /* Reduz a altura para que se ajuste melhor em telas menores */
+    height: 80vh;
     border-radius: 20px;
     color: #fff;
     cursor: pointer;
-    flex: 1 1 200px; /* Ajusta os painéis para ocupar o espaço disponível */
+    flex: 0.5;
     margin: 10px;
     position: relative;
     transition: flex 0.7s ease-in;
-    min-width: 280px; /* Garante que o painel tenha um tamanho mínimo razoável */
 }
 
 .panel h3 {
-    font-size: 24px;
+    font-size: 50px;
     position: absolute;
     bottom: 20px;
-    left: 20px;
+    left: 50px;
     margin: 0;
     opacity: 0;
-    transition: opacity 0.3s ease-in;
 }
 
 .panel.active {
-    flex: 3; /* Ajusta o fator de expansão em telas menores */
+    flex: 5;
 }
 
 .panel.active h3 {
@@ -61,35 +55,12 @@ body {
     transition: opacity 0.3s ease-in 0.4s;
 }
 
-/* Estilo para telas médias (tablets) */
-@media (max-width: 768px) {
-    .panel {
-        height: 40vh; /* Ajuste de altura para telas médias */
-        flex: 1 1 100%; /* Cada painel ocupa 100% da largura em telas médias */
-    }
-
-    .panel.active {
-        flex: 1 1 100%; /* Não expande tanto em telas menores */
-    }
-
-    .panel h3 {
-        font-size: 20px; /* Reduz o tamanho do texto em telas menores */
-    }
-}
-
-/* Estilo para telas pequenas (smartphones) */
 @media (max-width: 480px) {
     .container {
-        width: 100vw; /* Garante que o container ocupe a largura total da tela */
+        width: 100vw;
     }
-
-    .panel {
-        height: 35vh; /* Ajuste de altura para telas pequenas */
-        flex: 1 1 100%; /* Cada painel ocupa 100% da largura em telas pequenas */
-    }
-
-    .panel h3 {
-        font-size: 18px; /* Reduz ainda mais o tamanho do texto em telas menores */
-        left: 10px;
+    
+    .panel:nth-of-type(4), .panel:nth-of-type(5) {
+        display: none;
     }
 }
